--- a/manifest.json
+++ b/manifest.json
@@ -3,15 +3,10 @@
   "description": "Base Level Extension",
   "version": "1.0",
   "manifest_version": 2,
-  "permissions": ["storage"],
+  "permissions": ["storage", "declarativeContent", "activeTab", "contextMenus"],
   "browser_action": {
     "default_popup": "popup.html",
-    "default_icon": {
-      "16": "images/get_started16.png",
-      "32": "images/get_started32.png",
-      "48": "images/get_started48.png",
-      "128": "images/get_started128.png"
-    }
+    "default_icon": "images/get_started16.png"
   },
   "commands": {
     "_execute_browser_action": {
@@ -25,5 +20,12 @@
   "background": {
     "scripts": ["background.js"],
     "persistent": false
-  }
+  },
+  "icons": {
+    "16": "images/get_started16.png",
+    "32": "images/get_started32.png",
+    "48": "images/get_started48.png",
+    "128": "images/get_started128.png"
+  },
+  "options_page": "options.html"
 }
